8.Ingress-practical-1/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: harry-service
spec:
  selector:
    app.kubernetes.io/name: harry-app 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
