8.Ingress-practical-1/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: harry-service
spec:
  selector:
    app: harry-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
