8.Ingress-practical-1/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: middle-earth-service
spec:
  selector:
    app: middle-earth-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
