8.Ingress-practical-1/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harry-ingress
spec:
  rules:
  - host: harry.local
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harry-service                  
            port:
              number: 80
