8.Ingress-practical-1/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
spec:
  rules:
  - host: harry.middle.earth
    http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: harry-service
            port:
              number: 80
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: middle-earth-service
            port:
              number: 80
