8.Ingress-practical-1/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth1
spec:
  tls:
    - hosts:
      - foo.bar.com
      # this assume tls-secrect exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
  - host: hogwarts.middle.earth
    http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: hogwarts-service
            port:
              number: 80
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: middle-earth-service
            port:
              number: 80
