8.Ingress-practical-1/wildcard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress
spec:
  rules:
  - host: "*.middle.earth"
    http:
      paths:
      - path: /first/
        pathType: Prefix
        backend:
          service:
            name: hogwarts-service
            port:
              number: 80
